added html structure and filler content, began grid placement

--- a/index.html
+++ b/index.html
@@ -4,8 +4,125 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
+    <div class="header">
+        <input type="text">
+        <button type="submit">Submit</button>
+        <img src="" alt="alert bell">
+        <img src="" alt="pp-link">
+        <p>Geoff Sweetwood</p>
+        <img src="" alt="Profile Picture">
+        <p>Hi there,</p>
+        <p>Geoff Sweetwood (@sweetwood)</p>
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button>
+    </div>
+
+    <div class="sidebar">
+        <img src="" alt="logo">        
+        <p>Dashboard</p>
+        <p>Home</p>
+        <p>Profile</p>
+        <p>Messages</p>
+        <p>History</p>
+        <p>Tasks</p>
+        <p>Communities</p>
+        <p>Settings</p>
+        <p>Support</p>
+        <p>Privacy</p>
+    </div>
+
+    <div class="main-content">
+        <div class="projects">
+            <h3>Your Projects</h3>
+                <div class="cards">
+                    <h4>Super Cool Project</h4>
+                    <p>Proin quis suscipit diam. Aliquam non quam a lorem blandit aliquam. Etiam pulvinar ullamcorper lobortis. Cras sollicitudin erat ut ipsum suscipit, sed aliquam mauris mollis.</p>
+                    <img src="" alt="Star">
+                    <img src="" alt="Eye">
+                    <img src="" alt="Link">
+                </div>
+                <div class="cards">
+                    <h4>Less Cool Project</h4>
+                    <p>Suspendisse ultrices nisl non consectetur luctus. Vivamus mattis eros ornare lorem accumsan, eu semper mauris volutpat. Curabitur id fermentum lorem. Praesent eu metus in nibh.</p>
+                    <img src="" alt="Star">
+                    <img src="" alt="Eye">
+                    <img src="" alt="Link">
+                </div>
+                <div class="cards">
+                    <h4>Impossible App</h4>
+                    <p>Integer faucibus justo justo, id sagittis purus cursus in. Sed porta, massa a semper ultricies, purus sem viverra risus, in dapibus nisl risus eu ipsum.</p>
+                    <img src="" alt="Star">
+                    <img src="" alt="Eye">
+                    <img src="" alt="Link">
+                </div>
+                <div class="cards">
+                    <h4>Easy Peasy App</h4>
+                    <p>Nunc euismod purus et eleifend pellentesque. Donec ac augue ac nunc accumsan accumsan. Sed ornare convallis velit, a tincidunt massa vulputate et. Aliquam maximus mauris.</p>
+                    <img src="" alt="Star">
+                    <img src="" alt="Eye">
+                    <img src="" alt="Link">
+                </div>
+                <div class="cards">
+                    <h4>Ad Blocker</h4>
+                    <p>Integer augue purus, mattis et magna non, accumsan convallis tellus. Donec quis venenatis felis. Praesent eu nunc vel nulla vestibulum elementum. Ut hendrerit congue suscipit.</p>
+                    <img src="" alt="Star">
+                    <img src="" alt="Eye">
+                    <img src="" alt="Link">
+                </div>
+                <div class="cards">
+                    <h4>Money Maker</h4>
+                    <p>Praesent cursus neque neque, vel egestas libero fermentum in. Integer ornare in augue feugiat sollicitudin. Suspendisse in porta eros. Quisque vestibulum nunc et nisl auctor.</p>
+                    <img src="" alt="Star">
+                    <img src="" alt="Eye">
+                    <img src="" alt="Link">
+                </div>
+        </div>
+
+        <div class="announcements">
+            <h3>Announcements</h3>
+            <div class="section">
+                <h5>Site Maintenence</h5>
+                <p>Fusce facilisis, odio at dapibus dignissim, magna metus tincidunt erat, sed faucibus neque est eget eros. Ut quis neque mauris.</p>
+            </div>
+            <div class="section">
+                <h5>Community Share Day</h5>
+                <p>Pellentesque nec arcu nec massa gravida venenatis ac eget elit. Etiam at cursus felis. Nam sit amet urna vel turpis.</p>
+            </div>
+            <div class="section">
+                <h5>Updated Privacy Policy</h5>
+                <p>Etiam ornare nunc turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque molestie, justo.</p>
+            </div>
+        </div>
+
+        <div class="trending">
+            <h3>Trending</h3>
+            <div class="trending-profiles">
+                <img src="" alt="pp-link">
+                <p>@tegan</p>
+                <p>World Peace Builder</p>
+            </div>
+            <div class="trending-profiles">
+                <img src="" alt="pp-link">
+                <p>@morgan</p>
+                <p>Super Cool Project</p>
+            </div>
+            <div class="trending-profiles">
+                <img src="" alt="pp-link">
+                <p>@kendall</p>
+                <p>Life Changing App</p>
+            </div>
+            <div class="trending-profiles">
+                <img src="" alt="pp-link">
+                <p>@alex</p>
+                <p>No Traffic Maker</p>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
